crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_206_Namcot118_Family_Circuit_Japan_Namcot_Collection_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-206-Namcot118/Family Circuit (Japan) (Namcot Collection).zip
rom_sha256=d26f7680406ec453d009f5418086165f566d2cacde441a73947683f91a7d1eb9
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=a9b479047c55338a
checkpoint f900 fb_fnv1a64=9eb10071fc505a66
checkpoint f1100 fb_fnv1a64=762001f8aa7a424a
