crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_206_Namcot118_Fantasy_Zone.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-206-Namcot118/Fantasy Zone.nes
rom_sha256=2099200dbe0510cc150e0a98cac77b78ea0dba08fbdb1d59112312fda8eb160e
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=b81a7fbe437660dc
checkpoint f900 fb_fnv1a64=aa50bcf04bbc42d6
checkpoint f1100 fb_fnv1a64=2a0ef5758f3e1a18
