crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_209_JYCompany209_Mike_Tyson_s_Punch_Out_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-209-JYCompany209/Mike Tyson's Punch-Out!! (Unl) [!].zip
rom_sha256=f023e8f22ae9aa2dc447dd48f5dcc0f3840aa316e8ba3be01c87c77b1d86e359
frames=1141
fb_bytes=245760
cycles=33949810
audio_samples=836506
audio_fnv1a64=2ba1405aba6d5546
checkpoint f900 fb_fnv1a64=b7fb355e4a34b7bf
checkpoint f1100 fb_fnv1a64=88a60e2cbd7b3e0c
