crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_210_Namco175_340_Family_Circuit_91_Japan_En_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-210-Namco175-340/Family Circuit '91 (Japan) (En).zip
rom_sha256=4215645e55d899c3fb4c51425b69b6dace6907bf7d75d7e689802657b4751425
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=6753c2a60aebbd40
checkpoint f900 fb_fnv1a64=0fe2b9d75f30f211
checkpoint f1100 fb_fnv1a64=0fe2b9d75f30f211
